--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "prism-media": "^1.2.2",
     "ytdl-core": "^4.0.3",
     "ytpl": "^1.0.1",
-    "ytsr": "^0.1.21",
+    "ytsr@wip": "^0.1.21",
     "he": "^1.2.0"
   }
 }
