--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ytdl-core": "^4.0.3",
     "ytpl": "^1.0.1",
     "ytsr": "^2.0.0-alpha.4",
+    "ffmpeg-static": "^4.2.7",
     "he": "^1.2.0"
   }
 }
